--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "backend-express",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "main": "index.js",
   "repository": "git@github.com:iam8uman/backend-express.git",
   "author": "iam8uman <me8848you@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^8.5.1",
+    "nodemon": "^3.1.4"
   }
 }
