--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "iam8uman <me8848you@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
   }
